--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.primateer.daikoku.MainActivity"
+            android:name="com.primateer.daikoku.activities.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.primateer.daikoku.MealPlanActivity"
+            android:name="com.primateer.daikoku.activities.MealPlanActivity"
             android:label="@string/title_activity_meal_plan" >
         </activity>
     </application>
