--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.primateer.daikoku.activities.MainActivity"
+            android:name="com.primateer.daikoku.ui.activities.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,11 +24,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.primateer.daikoku.activities.MealPlanActivity"
+            android:name="com.primateer.daikoku.ui.activities.MealPlanActivity"
             android:label="@string/title_activity_meal_plan" >
         </activity>
         <activity
-            android:name="com.primateer.daikoku.activities.GoalsActivity"
+            android:name="com.primateer.daikoku.ui.activities.GoalsActivity"
             android:label="@string/title_activity_goals" >
         </activity>
         <provider
